ifcc-test-output/testfiles-TestsOK-Invalid-8_deux_declarations/gcc-compile.txt
input.c: In function ‘main’:
input.c:4:9: error: redeclaration of ‘a’ with no linkage
    4 |     int a;
      |         ^
input.c:2:9: note: previous declaration of ‘a’ with type ‘int’
    2 |     int a;
      |         ^

exit status: 1
